# DiscoMatsu

./: Makefile  README.md  install-badgelink.ps1  setup.ps1
main/: CMakeLists.txt  Kconfig.projbuild  audio_output.c  audio_output.h  cd_metadata.c  cd_metadata.h  cd_ripper.c  cd_ripper.h  cdplayer_task.c  cdplayer_task.h  cdrom_audio.c  cdrom_audio.h  dobber_splash.c  idf_component.yml  lastfm_config_file.c  lastfm_config_file.h  lastfm_scrobbler.c  lastfm_scrobbler.h  main.c  sd_storage.c  sd_storage.h  usb_msc_scsi.c  usb_msc_scsi.h  wifi_file_server.c  wifi_file_server.h  wifi_setup.c  wifi_setup.h
sdkconfigs/: general
tools/: package-app-repository.ps1
